[gd_scene load_steps=6 format=3 uid="uid://bpyc5pjqb3o1d"]

[ext_resource type="Script" path="res://scripts/projectiles/magic_ball.gd" id="1_qu08c"]
[ext_resource type="Shader" uid="uid://cjvknema1om3c" path="res://shaders/magicBall.tres" id="1_yeern"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wbw8q"]
render_priority = 0
shader = ExtResource("1_yeern")

[sub_resource type="SphereMesh" id="SphereMesh_p4dlp"]
material = SubResource("ShaderMaterial_wbw8q")
radius = 0.125
height = 0.125
radial_segments = 12
rings = 3

[sub_resource type="SphereShape3D" id="SphereShape3D_a7woq"]
radius = 0.25

[node name="MagicBall" type="Area3D" groups=["magi"]]
script = ExtResource("1_qu08c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("SphereMesh_p4dlp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_a7woq")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.619608, 0.121569, 0.988235, 1)
light_indirect_energy = 0.5
omni_range = 1.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="ExpireTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ExpireTimer" to="." method="_on_expire_timer_timeout"]
